thesis: tests, summary: remarks

--- a/thesis/tex/summary.tex
+++ b/thesis/tex/summary.tex
@@ -15,9 +15,9 @@ Narzędzie \emph{GUI4PDDL} zostało zaimplementowane jako wtyczka do środowiska
 zespół miał możliwość zapoznania się z architekturą rozbudowanej aplikacji. Jest to cenne doświadczenie,
 które może zostać wykorzystane w pracy zawodowej.
 
-Planowane jest wykorzystanie opracowanego narzędzia na zajęciach dydaktycznych prowadzonych na Wydziale 
-Informatyki Politechniki Poznańskiej w ramach przedmiotu Sztuczna Inteligencja. Opiekun niniejszej pracy mgr Jędrzej
-Potoniec prowadzi zajęcia laboratoryjne z tego przedmiotu. Wprowadzenie zintegrowanego środowiska programistycznego
+Planowane jest wykorzystanie opracowanego narzędzia na zajęciach laboratoryjnych prowadzonych na Wydziale 
+Informatyki Politechniki Poznańskiej w ramach przedmiotów \emph{sztuczna inteligencja} oraz \emph{sztuczna inteligencja i systemy wspomagania decyzji}.
+Wprowadzenie zintegrowanego środowiska programistycznego
 ułatwi studentom tworzenie i testowanie problemów planowania. Przyczyni się to do lepszego zrozumienia tematyki
 automatycznego planowania.
 
