thesis: intro: removed some invalid remarks

--- a/thesis/tex/intro.tex
+++ b/thesis/tex/intro.tex
@@ -21,9 +21,9 @@ Kolejny rozdział (roz. \ref{sec:specyfikacja}) to opis wymagań funkcjonalnych 
 
 Rozdział czwarty podzielony jest na dwie części. W pierwszej z nich (roz. \ref{sec:eclipseśrodowisko})  opisane jest środowisko programistyczne Eclipse, w którym stworzona została wtyczka GUI4PDDL. Jest to również środowisko, na którym docelowo ma działać stworzony projekt. W drugiej części (roz. \ref{sec:antlrśrodowisko}) opisany został generator analizatorów składniowych ANTLR.
 
-W rozdziale \ref{sec:piaty}\JP{!!} przedstawiono architekturę tworzonego systemu, uwzględniając jego podział na projekty platformy \emph{Eclipse}. Opisana jest tu również szczegółowa zawartość każdego pakietu głównego projektu.
+W rozdziale \ref{sec:piaty} przedstawiono architekturę tworzonego systemu, uwzględniając jego podział na projekty platformy \emph{Eclipse}. Opisana jest tu również szczegółowa zawartość każdego pakietu głównego projektu.
 
-Następny rozdział (roz. \ref{sec:implementacja}\JP{!!}) zawiera szczegółowe przedstawienie implementacji najważniejszych funkcjonalności. Opisane są tu kwestie tworzenia nowego projektu PDDL oraz nowych plików PDDL (roz. \ref{sec:zarzadzanie}\JP{!!}).W kolejnej części ukazano zagadnienia związane z~przetwarzaniem kodu PDDL, czyli wykrywanie błędów składniowych i semantycznych oraz podpowiadanie kodu (roz. \ref{sec:przetwarzanie}). Dalej przedstawione są: kolorowanie kodu, automatyczne wcięcia, dopasowanie nawiasów oraz kwestie związane z obsługą podpowiedzi (roz. \ref{sec:edytor}).  Na końcu omówiono współpracę wtyczki z oprogramowaniem wyznaczającym plan, jego konfigurację i uruchamianie, a także przerywanie procesu planowania (roz. \ref{sec:wspolpraca}).
+Następny rozdział (roz. \ref{sec:implementacja}) zawiera szczegółowe przedstawienie implementacji najważniejszych funkcjonalności. Opisane są tu kwestie tworzenia nowego projektu PDDL oraz nowych plików PDDL (roz. \ref{sec:zarzadzanie}).W kolejnej części ukazano zagadnienia związane z~przetwarzaniem kodu PDDL, czyli wykrywanie błędów składniowych i semantycznych oraz podpowiadanie kodu (roz. \ref{sec:przetwarzanie}). Dalej przedstawione są: kolorowanie kodu, automatyczne wcięcia, dopasowanie nawiasów oraz kwestie związane z obsługą podpowiedzi (roz. \ref{sec:edytor}).  Na końcu omówiono współpracę wtyczki z oprogramowaniem wyznaczającym plan, jego konfigurację i uruchamianie, a także przerywanie procesu planowania (roz. \ref{sec:wspolpraca}).
 
 W rozdziale \ref{sec:testy} opisane są testy jednostkowe kodu oraz gramatyk formalnych. Dodatkowo przedstawiono testy akceptacyjne.
 
